eslint rm, userArr

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     <script src="./js/main.js" defer></script>
   </head>
   <body>
-    <h1>Classes</h1>
+    <h1>Classes !!!</h1>
   </body>
 </html>
