--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TS2 Classes</title>
-    <script type="module" src="./js/main.js" defer></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"
+    />
+    <!-- <script type="module" src="./js/main.js" defer></script> -->
+    <script type="module" src="./js/html.js" defer></script>
   </head>
-  <body>
+  <body style="margin-bottom: 300px">
     <h1>Classes !!!</h1>
+    <form id="addPerson">
+      <input type="text" id="name" placeholder="name" value="James" />
+      <input type="number" id="age" placeholder="age" value="55" />
+      <select id="workerType">
+        <option value="em">Employee</option>
+        <option value="pa">Partner</option>
+      </select>
+      <input min="0" type="number" id="payPerHour" placeholder="payPerHour" value="10" />
+      <button type="submit">create</button>
+    </form>
+    <div>
+      <table id="workers">
+        <thead>
+          <tr>
+            <th>id</th>
+            <th>Vardas</th>
+            <th>Amzius</th>
+            <th>Tipas</th>
+            <th>Dirbo(val)</th>
+            <th>Sumoketi</th>
+          </tr>
+        </thead>
+        <tbody id="workers-body"> </tbody>
+      </table>
+    </div>
   </body>
 </html>
