worker table in progress

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
             <th>Vardas</th>
             <th>Amzius</th>
             <th>Tipas</th>
+            <th>Valandinis</th>
             <th>Dirbo(val)</th>
             <th>Sumoketi</th>
           </tr>
