--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,12 @@
         <tbody id="workers-body"> </tbody>
       </table>
     </div>
+    <div class="addWork">
+      <form>
+        <input type="text" id="id" placeholder="worker id" value="pr_2" />
+        <input type="number" name="hours" id="hours" />
+        <button>add</button>
+      </form>
+    </div>
   </body>
 </html>
